re PR inline-asm/10890 (ICE in merge_assigned_reloads building Linux 2.4.2x sched.c)

PR inline-asm/10890
* reload1.c (merge_assigned_reloads): Abort only if two reloads have
different in fields.

From-SVN: r67577