gcc/reload1.c
@@ -6138,13 +6138,15 @@ merge_assigned_reloads (insn)
 		       ? RELOAD_FOR_OTHER_ADDRESS : RELOAD_OTHER);
 
 		  /* Check to see if we accidentally converted two reloads
-		     that use the same reload register to the same type.
-		     If so, the resulting code won't work, so abort.  */
+		     that use the same reload register with different inputs
+		     to the same type.  If so, the resulting code won't work,
+		     so abort.  */
 		  if (rld[j].reg_rtx)
 		    for (k = 0; k < j; k++)
 		      if (rld[k].in != 0 && rld[k].reg_rtx != 0
 			  && rld[k].when_needed == rld[j].when_needed
-			  && rtx_equal_p (rld[k].reg_rtx, rld[j].reg_rtx))
+			  && rtx_equal_p (rld[k].reg_rtx, rld[j].reg_rtx)
+			  && ! rtx_equal_p (rld[k].in, rld[j].in))
 			abort ();
 		}
 	}
